[package]
name = "procs"
version = "0.13.3"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/procs"
keywords = ["process"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "A modern replacement for ps"
edition = "2021"
exclude = ["img/*", "config/*"]

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/procs/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="README.md", search = "changelog-v[0-9\\.]+", replace = "changelog-v{{version}}" },
    {file="README.md", search = "v[0-9\\.]+/procs-[0-9\\.]+", replace = "v{{version}}/procs-{{version}}" },
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[features]
default = ["docker"]
docker = ["dockworker"]

[badges]
travis-ci = { repository = "dalance/procs" }
codecov   = { repository = "dalance/procs", branch = "master", service = "github" }

[dependencies]
anyhow        = "1.0"
atty          = "0.2.14"
byte-unit     = "4"
clap          = {version = "3.2.23", features = ["derive"]}
clap_complete = "3.2.5"
console       = "0.15.5"
chrono        = "0.4.23"
directories   = "4.0.1"
dockworker    = { version = "0.1.0", optional = true }
getch         = "0.3.1"
libc          = "0.2"
once_cell     = "1.17.0"
serde         = "1.0"
serde_derive  = "1.0"
termbg        = "0.4.1"
toml          = "0.5"
unicode-width = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
pager         = "0.16.1"
procfs        = "0.14.2"
users         = "0.11"
which         = "4"

[target.'cfg(target_os = "macos")'.dependencies]
libproc       = "0.12"
nix           = {version = "0.26.1", features = ["process"]}
errno         = "0.2"
pager         = "0.16"
users         = "0.11"
which         = "4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi        = { version = "0.3", features = ["handleapi", "minwindef", "psapi", "securitybaseapi", "tlhelp32", "winbase", "winnt", "iphlpapi"] }

[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
procs = { path = "/usr/bin/procs" }

[profile.release]
lto = true
codegen-units = 1
