[package]
name = "procs"
version = "0.14.2"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/procs"
keywords = ["process"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "A modern replacement for ps"
edition = "2021"
exclude = ["img/*", "config/*"]
rust-version = "1.70"

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/procs/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="README.md", search = "changelog-v[0-9\\.]+", replace = "changelog-v{{version}}" },
    {file="README.md", search = "v[0-9\\.]+/procs-[0-9\\.]+", replace = "v{{version}}/procs-{{version}}" },
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[features]
default = ["docker"]
docker = ["dockworker", "tokio"]

[badges]
travis-ci = { repository = "dalance/procs" }
codecov   = { repository = "dalance/procs", branch = "master", service = "github" }

[dependencies]
anyhow        = "1.0"
byte-unit     = "4"
clap          = {version = "3.2.25", features = ["derive"]}
clap_complete = "3.2.5"
console       = "0.15.7"
chrono        = {version = "0.4.31", default-features = false, features = ["clock"]}
directories   = "5.0.1"
dockworker    = { version = "0.3.0", optional = true }
getch         = "0.3.1"
libc          = "0.2"
minus         = { version = "5.4", features = ["static_output", "search"] }
once_cell     = "1.18.0"
serde         = "1.0"
serde_derive  = "1.0"
termbg        = "0.4.3"
tokio         = { version = "1.33", optional = true, features = ["rt"] }
toml          = "0.8"
unicode-width = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
pager         = "0.16.1"
procfs        = "0.15.1"
regex         = "1.10"
uzers         = "0.11"
which         = "5"

[target.'cfg(target_os = "macos")'.dependencies]
libproc       = "0.14"
nix           = {version = "0.27.1", features = ["process"]}
errno         = "0.3"
pager         = "0.16"
uzers         = "0.11"
which         = "5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi        = { version = "0.3", features = ["handleapi", "minwindef", "psapi", "securitybaseapi", "tlhelp32", "winbase", "winnt", "iphlpapi"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
bsd-kvm       = { version = "0.1.1", path = "../bsd-kvm" }
bsd-kvm-sys   = { version = "0.2.0", path = "../bsd-kvm-sys" }
pager         = "0.16.1"
uzers         = "0.11"
which         = "5"

[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
procs = { path = "/usr/bin/procs" }

[profile.release]
lto = true
codegen-units = 1
