[package]
name = "procs"
version = "0.14.10"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/procs"
keywords = ["process"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "A modern replacement for ps"
edition = "2021"
exclude = ["img/*", "config/*"]
rust-version = "1.74"

[package.metadata.release]
pre-release-commit-message = "Prepare to v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/procs/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="README.md", search = "changelog-v[0-9\\.]+", replace = "changelog-v{{version}}" },
    {file="README.md", search = "v[0-9\\.]+/procs-[0-9\\.]+", replace = "v{{version}}/procs-{{version}}" },
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[features]
default = ["docker"]
docker = ["dockworker", "tokio"]

[badges]
travis-ci = { repository = "dalance/procs" }
codecov   = { repository = "dalance/procs", branch = "master", service = "github" }

[dependencies]
anyhow        = "1.0"
byte-unit     = "5.1"
clap          = {version = "4.4", features = ["derive"]}
clap_complete = "4.4"
console       = "0.15.11"
chrono        = {version = "0.4.40", default-features = false, features = ["clock"]}
directories   = "6.0.0"
dockworker    = { version = "0.6.0", optional = true }
getch         = "0.3.1"
libc          = "0.2"
minus         = { version = "5.6", features = ["static_output", "search"] }
once_cell     = "1.21.2"
serde         = "1.0"
serde_derive  = "1.0"
termbg        = "0.6.2"
tokio         = { version = "1.44", optional = true, features = ["rt"] }
toml          = "0.8"
unicode-width = "0.2"

[build-dependencies]
anyhow        = "1.0"
clap          = {version = "4.4", features = ["derive"]}
clap_complete = "4.4"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
pager         = "0.16.1"
procfs        = "0.17.0"
regex         = "1.11"
uzers         = "0.12"
which         = "7"

[target.'cfg(target_os = "macos")'.dependencies]
libproc       = "0.14"
nix           = {version = "0.29.0", features = ["process"]}
errno         = "0.3"
pager         = "0.16"
uzers         = "0.12"
which         = "7"
mach2         = "0.4.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys   = { version = "0.59", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
bsd-kvm       = "0.1.5"
bsd-kvm-sys   = "0.2.0"
pager         = "0.16.1"
uzers         = "0.12"
which         = "7"

[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
procs = { path = "/usr/bin/procs" }

[profile.release]
lto = true
codegen-units = 1
