[package]
name = "libproc"
version = "0.3.2"
description = "A rust wrapper of libproc to get information about running processes - currently Mac OS X only"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/libproc-rs"
readme = "README.md"
license = "MIT"

[dependencies]
errno = "^0.1.8"
libc = "^0.2.15"

[lib]
name = "libproc"
path = "src/lib.rs"

[[bin]]
name = "procinfo"
path = "src/procinfo.rs"

[[bin]]
name = "dmesg"
path = "src/dmesg.rs"
